--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-    background: linear-gradient(0deg, #06092B, #06092B);
+    
+    background:  linear-gradient( -110grad, red, green, yellow, blue );
+
     font-family: 'Poppins', sans-serif;
     margin: 0px;
 }
