Melhorando o uso do ::before nos detalhes das paginas Sign in/up

--- a/createAccount/createAccount.css
+++ b/createAccount/createAccount.css
@@ -9,6 +9,7 @@ h1 {
 
 h2 {
     display: inline-block;
+    margin-left: 10px;
 }
 
 p, span {
@@ -149,10 +150,13 @@ label {
     margin-left: 5px;
 }
 
-.detail::before {
+#detail::before {
     background-color: #35BDAC;
-    content: ' ';
+    content: "";
     display: inline-block;
+    position: absolute;
+    left: 168px;
+    top: 22px;
     height: 31px;
     width: 7px; 
-} 
+}
