detail in page Sign in/up

--- a/createAccount/createAccount.css
+++ b/createAccount/createAccount.css
@@ -8,8 +8,7 @@ h1 {
 }
 
 h2 {
-    display: inline-block;
-    margin-left: 10px;
+    margin-left: 15px;
 }
 
 p, span {
@@ -150,12 +149,16 @@ label {
     margin-left: 5px;
 }
 
-#detail::before {
+.detail {
+    display: grid;
+    position: relative;
+  }
+
+.detail::before {
     background-color: #35BDAC;
-    content: "";
+    content: '';
     display: inline-block;
     position: absolute;
-    left: 168px;
     top: 22px;
     height: 31px;
     width: 7px; 
