--- a/login/login.css
+++ b/login/login.css
@@ -8,8 +8,7 @@ h1 {
 }
 
 h2 {
-    display: inline-block;   
-    margin-left: 10px; 
+    margin-left: 15px;
 }
 
 p, span {
@@ -103,9 +102,8 @@ label {
 }
 
 .signIn {
-    margin: 0px;
-    display: grid;
     align-content: start;
+    display: grid;
     justify-content: center;
     gap: 10px;
     position: relative;
@@ -155,13 +153,18 @@ label {
     margin-left: 5px;
 }
 
-#detail::before {
+.detail {
+    display: grid;
+    position: relative;
+  }
+
+.detail::before {
     background-color: #35BDAC;
-    content: "";
+    content: '';
     display: inline-block;
     position: absolute;
-    left: 168px;
     top: 22px;
     height: 31px;
     width: 7px; 
-} 
+}
+  
