--- a/style.css
+++ b/style.css
@@ -9,19 +9,18 @@ body::before { /* Avaliar o melhor caso de uso body ou footer
     content: "";
     display: block;
     width: 100%;
-    height: 50vh;
+    height: 100vh;
     background-color: #06092B;
-    transform: skew(0deg, -2deg);
+    transform: skew(0deg, 2deg);
     position: absolute;
     top: 0px;
     left: 0px;
-    transform-origin: left;
+    transform-origin: right;
     z-index: -1;
 }
 
-h2 {
-    text-transform: uppercase;
-    font-size: 16px;
+h2, p {
+    margin: 0px;
 }
 
 a {
@@ -33,7 +32,7 @@ a {
     color: #F231A5;
 }
 
-.grid {
+.nav-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, 1fr);
     margin: 25px 60px;
@@ -59,6 +58,60 @@ a {
     border-radius: 4px;
     display: grid;
     padding: 10px 25px;
+}
+
+/* main */
+
+/* Vídeo de como fazer o texto por cima da imagem: https://www.youtube.com/watch?v=66SY-HpgS_0 */
+.intro {
+    margin: auto;
+    height: 585px;
+    max-width: 1050px;
+    position: relative;
+}
+
+.intro img {
+    width: 100%;
+}
+
+.intro-content {
+    display: grid;
+    background-color: rgba(0, 0, 0, 0.5);
+    bottom: 0px;
+    color: #FAFAFA;
+    gap: 5px;
+    padding: 0px 50px;
+    position: absolute;
+    height: 220px;
+    width: 90%;
+}
+
+.intro-content h2 {
+    align-self: end;
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.intro-content p, .intro-content span {
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 400;
+}
+
+.intro-content span {
+    color: #F231A5;
+}
+
+.button-buy {
+    background: linear-gradient(178.59deg, #FF5F5F -14.51%, #F062C0 102.86%, #F23131 102.86%);
+    border: none;
+    border-radius: 4px;
+    color: #FAFAFA;
+    cursor: pointer;
+    font-size: 16px;
+    text-align: center;
+    width: 10rem;
+    height: 3rem;
 }
 
 /* footer */
@@ -98,7 +151,12 @@ footer {
     display: block;
 }
 
-h2::after {
+.grid-footer h2 {
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+.grid-footer h2::after {
     background: #3CD3C1;
     content: "";
     display: block;
