--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #FAFAFA;
+    background-color: #F2F2F2;;
     font-family: 'Poppins', sans-serif;
     margin: 0px;
 }
@@ -62,6 +62,7 @@ a {
 
 /* main */
 
+/* article */
 /* Vídeo de como fazer o texto por cima da imagem: https://www.youtube.com/watch?v=66SY-HpgS_0 */
 .intro {
     margin: auto;
@@ -113,6 +114,81 @@ a {
     width: 10rem;
     height: 3rem;
 }
+
+/* section */
+.news-ul {
+    display: flex;
+    gap: 30px;
+    list-style: none;
+    margin: 0px;
+}
+
+.news-list-image{
+    display: block;
+    border-radius: 4px 4px 0px 0px;
+}
+
+.news-list {
+    max-width: 293px;
+}
+
+.grid-content-list {
+    background-color: #FAFAFA;
+    border-radius: 0px 0px 4px 4px;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
+    padding: 15px;
+}
+
+.flex-content-list {
+    /* display: flex; */
+    display: grid;
+    justify-content: end;
+    grid-row: 1;
+    grid-column: 2;
+    
+}
+
+.flex-content-list span {
+    display: block;
+}
+
+.grid-price{
+    display: grid;
+    place-content: end;
+}
+
+.price {
+    background-color: #3CD3C1;
+    border-radius: 2px;
+    color: white;
+    display: grid;
+    margin-top: 3px;
+    place-content: center;
+    text-align: center;
+    height: 25px;
+    width: 75px;
+}
+
+.game-name {
+    color: #030517;
+    font-size: 16px;
+}
+
+.game-producer {
+    color: #BBBBBB;
+    font-size: 12px;
+}
+
+/* .flex-content-list {
+    display: flex;
+    justify-content: space-between;
+} */
+
+/* .teste {
+    grid-row: 2;
+} */
 
 /* footer */
 footer {    
