--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    position: relative;
+}
+
 body {
     background-color: #F2F2F2;;
     font-family: 'Poppins', sans-serif;
@@ -19,7 +26,7 @@ body::before { /* Avaliar o melhor caso de uso body ou footer
     z-index: -1;
 }
 
-h2, p {
+h1, h2, p {
     margin: 0px;
 }
 
@@ -116,8 +123,34 @@ a {
 }
 
 /* section */
+.section-news {
+    display: grid;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    max-width: 1050px;
+    gap: 20px;
+
+}
+
+.news {
+    margin-left: 15px;
+}
+
+.news::before {
+    background: #3CD3C1;
+    margin-left: -15px;
+    content: "";
+    display: block;
+    height: 25px;
+    width: 8px;
+    top: 15%;
+    position: absolute;
+}
+
 .news-ul {
     display: flex;
+    justify-content: space-between;
     gap: 30px;
     list-style: none;
     margin: 0px;
@@ -130,6 +163,7 @@ a {
 
 .news-list {
     max-width: 293px;
+    max-height: 137px;
 }
 
 .grid-content-list {
@@ -142,12 +176,10 @@ a {
 }
 
 .flex-content-list {
-    /* display: flex; */
     display: grid;
     justify-content: end;
     grid-row: 1;
-    grid-column: 2;
-    
+    grid-column: 2;    
 }
 
 .flex-content-list span {
@@ -180,15 +212,6 @@ a {
     color: #BBBBBB;
     font-size: 12px;
 }
-
-/* .flex-content-list {
-    display: flex;
-    justify-content: space-between;
-} */
-
-/* .teste {
-    grid-row: 2;
-} */
 
 /* footer */
 footer {    
@@ -239,6 +262,10 @@ footer {
     height: 5px;
     width: 22px;
     position: absolute;
+}
+
+.grid-footer h2 {
+    margin-bottom: 15px;
 }
 
 .copywriting {
