--- a/style.css
+++ b/style.css
@@ -88,8 +88,6 @@ a {
 
 .bestselling::after {
     content: '';
-    /*background-color: red;   */
-    /* background: #3CD3C1; */
     background:linear-gradient(to bottom right,#3CD3C1 50%,#06092B 50%);
     opacity: 0.7;
     display: inline-block;
@@ -179,21 +177,32 @@ a {
 
 /* section */
 .section-news {
-    display: grid;
     margin: auto;
-    margin-top: 60px;
+    width: 1440px;
     margin-bottom: 60px;
-    max-width: 1043px;
-    gap: 20px;
 }
 
-.news {
+.section-news-carousel {
+    margin: auto;
+    margin-top: 60px;
+    max-width: 1043px;
+}
+.section-arrow-next {
+    top: -50px;
+    margin-right: 120px;
+    display: flex;
+    justify-content: end;
+}
+
+.news-title {
     font-size: 28px;
     font-weight: 600;
     margin-left: 15px;
+    margin-bottom: 30px;
+
 }
 
-.news::before {
+.news-title::before {
     background: #3CD3C1;
     margin-left: -15px;
     content: "";
@@ -206,10 +215,9 @@ a {
 
 .news-ul {
     display: flex;
-    justify-content: space-between;
     gap: 30px;
+    justify-content: space-between;
     list-style: none;
-    margin: 0px;
 }
 
 .news-list-image{
@@ -243,7 +251,9 @@ a {
 }
 
 .grid-price{
-    display: grid;
+    display: flex;
+    gap: 5px;
+    margin-top: 3px;
     place-content: end;
 }
 
@@ -251,12 +261,23 @@ a {
     background-color: #3CD3C1;
     border-radius: 2px;
     color: white;
-    display: grid;
-    margin-top: 3px;
-    place-content: center;
     text-align: center;
     height: 25px;
     width: 75px;
+}
+
+.section-button-add {
+    background: linear-gradient(178.59deg, #FF5F5F -14.51%, #F062C0 102.86%, #F23131 102.86%);
+    border: none;
+    border-radius: 2px;
+    display: grid;
+    cursor: pointer;
+}
+
+.image-button-add {
+    height: 25px;
+    width: 28px;
+    padding: 3px;
 }
 
 .game-name {
