--- a/style.css
+++ b/style.css
@@ -16,15 +16,29 @@ body {
     content: "";
     display: block;
     width: 100%;
-    height: 47%;
+    height: 26%;
     background-color: #06092B;
-    transform: skew(0deg, 3deg);
+    transform: skew(0deg, 2deg);
     position: absolute;
     top: -25px;
     left: 0px;
     transform-origin: right;
     z-index: -1;
 } 
+
+.teste::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #06092B;
+    transform: skew(0deg, 2deg);
+    position: absolute;
+    top: 20px;
+    /* left: 0px; */
+    transform-origin: right;
+    z-index: -1;
+}
 
 h1, h2, p {
     margin: 0px;
@@ -189,20 +203,25 @@ a {
 }
 .section-arrow-next {
     top: -50px;
-    margin-right: 120px;
+    margin-right: 10%;
     display: flex;
     justify-content: end;
 }
 
-.news-title {
+.section-arrow-back {
+    top: 210px;
+    display: flex;
+    margin-left: 10%;
+}
+
+.layout-title {
     font-size: 28px;
     font-weight: 600;
     margin-left: 15px;
     margin-bottom: 30px;
-
 }
 
-.news-title::before {
+.layout-title::before {
     background: #3CD3C1;
     margin-left: -15px;
     content: "";
@@ -288,6 +307,69 @@ a {
 .game-producer {
     color: #BBBBBB;
     font-size: 12px;
+}
+
+/* section #2 */
+.section-content {
+    margin: auto;
+    margin-top: 150px;
+    width: 1440px;
+}
+
+.section-banner {
+    margin: auto;
+    margin-top: 100px;
+    max-width: 1043px;
+}
+
+.section-banner h1 {
+    color: #FAFAFA;
+}
+
+.banner {
+    background-image: url('assets/images/background-most-popular.svg');
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: space-between;
+    max-width: 100%;
+    height: 310px;
+}
+
+.banner img {
+    max-height: 100%;
+}
+
+.banner-content {
+    color: #FFFFFF;
+    display: grid;
+    padding: 60px 30px;
+    gap: 5px;
+    align-content: end;
+}
+
+.banner-content h2 {
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.banner-content p {
+    font-size: 18px;
+    font-weight: 300;
+}
+
+.banner-content a {
+    background: linear-gradient(178.59deg, #FF5F5F -14.51%, #F062C0 102.86%, #F23131 102.86%);
+    border-radius: 4px;
+    text-align: center;
+    padding: 5px 3px;
+}
+
+#upcoming {
+    color: #FAFAFA;
+}
+
+#upcoming-space {
+    margin-top: 30px;
 }
 
 /* footer */
