--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ a {
 }
 
 .banner {
-    background-image: url('assets/images/background-most-popular.svg');
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('assets/images/background-most-popular.svg') no-repeat;
     background-repeat: no-repeat;
     display: flex;
     justify-content: space-between;
@@ -337,7 +337,6 @@ a {
 
 .banner-free-games {
     background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('assets/images/background-free-games.png') no-repeat;
-    background-repeat: no-repeat;
     display: flex;
     justify-content: space-between;
     max-width: 100%;
