--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 body {
     background-color: #F2F2F2;
     font-family: 'Poppins', sans-serif;
-    margin: 0px;
 }
 
  body::before { /* Avaliar o melhor caso de uso body ou footer
@@ -40,17 +39,18 @@ body {
     z-index: -1;
 }
 
-h1, h2, p {
-    margin: 0px;
-}
-
 a {
     color: #FAFAFA;
     text-decoration: none;
 }
 
-.linkHover:hover {
-    color: #F231A5;
+.link::after {
+    background: #F231A5;
+    content: '';
+    display: block;
+    position: absolute;
+    width: 50px;
+    height: 3px;
 }
 
 .nav-grid {
