--- a/store/store.css
+++ b/store/store.css
@@ -9,7 +9,6 @@
 body {
     background-color: #06092B;
     font-family: 'Poppins', sans-serif;
-    max-width: 1440px;
 }
 
 a {
@@ -70,3 +69,98 @@ a {
     left: 10px;
     z-index: 1;
 }
+
+/* main */
+/* section */
+h3 {
+    color: white;
+}
+
+main {
+    max-width: 1440px;
+    margin: auto;
+}
+
+.grid-section {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+}
+
+/* Customizando checkbox & radio => https://www.youtube.com/watch?v=cksgCkee2uY */
+.container input {
+    display: none;
+}
+
+.container input + label:before {
+    background-color: white;
+    border: 2px solid #2E2F42;
+    border-radius: 2px;
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    width: 18px;
+    height: 18px;
+    
+}
+
+/* .filter-price {
+    display: grid;
+    gap: 5px;
+    grid-column: 1;
+} */
+
+.filter h3 {
+    margin-top: 50px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.container-checkbox input, .container-radio input{
+    display: none;
+}
+
+.container-checkbox, .container-radio {
+    color: #FAFAFA;
+    font-size: 14px;
+}
+
+.container-checkbox input + label:before {
+    content: '';
+    width: 12px;
+    height: 12px;
+    border-radius: 2px;
+    background-color: transparent;
+    border: 2px solid #2E2F42;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 8px;
+    margin-bottom: 2px;
+}
+
+.container-checkbox input:checked + label::before {
+    background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 10 10'%3E%3Cg class='nc-icon-wrapper' stroke-width='1' fill='%23555555'%3E%3Cpath fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='10' data-cap='butt' d='M2.83 4.72l1.58 1.58 2.83-2.83'/%3E%3C/g%3E%3C/svg%3E");
+    background-color: #F231A5;
+    background-position: center;
+    border: none;
+    padding: 2px;
+}
+
+.container-radio input + label:before {
+    content: '';
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 2px solid #2E2F42;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 8px;
+    margin-bottom: 2px;
+  }
+  
+  .container-radio input:checked + label:before {
+    background: radial-gradient(#F231A5 0%, #F231A5 40%, transparent 50%, transparent);
+    border-color: #F231A5;
+  }
+
