--- a/style.css
+++ b/style.css
@@ -25,15 +25,15 @@ body {
     z-index: -1;
 } 
 
-.teste::before {
+.background-polygon::before {
+    background-color: #06092B;
     content: "";
     display: block;
     width: 100%;
-    height: 100%;
-    background-color: #06092B;
+    height: 102%;
     transform: skew(0deg, 2deg);
     position: absolute;
-    top: 20px;
+    /* top: 20px; */
     /* left: 0px; */
     transform-origin: right;
     z-index: -1;
@@ -100,16 +100,16 @@ a {
     z-index: 1;
 }
 
-.bestselling::after {
+.bestselling::after{
+    border-top: 10px solid #3CD3C1; 
+    border-right: 15px solid transparent; 
     content: '';
-    background:linear-gradient(to bottom right,#3CD3C1 50%,#06092B 50%);
-    opacity: 0.7;
-    display: inline-block;
+    opacity: 0.5;
+    position: absolute;
     top: 100%;
     left: 85%;
-    width: 15%;
-    height: 10px;
-    position: absolute;
+    width: 0; 
+    height: 0; 
     z-index: 1;
 }
 
@@ -193,7 +193,6 @@ a {
 .section-news {
     margin: auto;
     width: 1440px;
-    margin-bottom: 60px;
 }
 
 .section-news-carousel {
@@ -202,7 +201,7 @@ a {
     max-width: 1043px;
 }
 .section-arrow-next {
-    top: -50px;
+    top: -135px;
     margin-right: 10%;
     display: flex;
     justify-content: end;
@@ -242,11 +241,6 @@ a {
 .news-list-image{
     display: block;
     border-radius: 4px 4px 0px 0px;
-}
-
-.news-list {
-    max-width: 293px;
-    max-height: 137px;
 }
 
 .grid-content-list {
@@ -312,13 +306,12 @@ a {
 /* section #2 */
 .section-content {
     margin: auto;
-    margin-top: 150px;
     width: 1440px;
 }
 
 .section-banner {
     margin: auto;
-    margin-top: 100px;
+    margin-top: 50px;
     max-width: 1043px;
 }
 
@@ -328,11 +321,9 @@ a {
 
 .banner {
     background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('assets/images/background-most-popular.svg') no-repeat;
-    background-repeat: no-repeat;
     display: flex;
     justify-content: space-between;
     max-width: 100%;
-    height: 310px;
 }
 
 .banner-free-games {
@@ -344,16 +335,17 @@ a {
 
 }
 
-.banner img {
-    max-height: 100%;
-}
-
 .banner-content {
     color: #FFFFFF;
     display: grid;
-    padding: 60px 30px;
-    gap: 5px;
     align-content: end;
+    justify-items: end;
+    gap: 5px;
+    padding: 60px 30px;
+}
+
+#banner-content-left {
+    justify-items: start;
 }
 
 .banner-content h2 {
@@ -363,14 +355,13 @@ a {
 
 .banner-content p {
     font-size: 18px;
-    font-weight: 300;
 }
 
 .banner-content a {
     background: linear-gradient(178.59deg, #FF5F5F -14.51%, #F062C0 102.86%, #F23131 102.86%);
     border-radius: 4px;
     text-align: center;
-    padding: 5px 3px;
+    padding: 10px 50px;
 }
 
 #upcoming {
@@ -435,10 +426,13 @@ del {
 footer {    
     box-sizing: border-box;
     padding: 100px;
-    width: 100%;
+    /* padding-bottom: 0; */
+    max-width: 1256px;
+    margin: auto;
 }
 
 .logo-won-black {
+    margin-bottom: 20px;
     width: 107px;
     height: 32px;
 }
@@ -446,12 +440,10 @@ footer {
 .grid-footer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    margin-top: 20px;
 }
 
 .grid-footer a:hover {
     color: #343333;
-
 }
 
 .grid-footer h2 {
@@ -489,6 +481,6 @@ footer {
 .copywriting {
     color: #666666;
     font-size: 12px;
-    margin-top: 80px;
+    margin-top: 50px;
     text-align: center;
 }
